force-app/main/default/objects/copado__Project__c/fields/Copado_Integration_Setting__c.field-meta.xml
<CustomField>
    <fullName>Copado_Integration_Setting__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Copado Integration Setting</label>
    <referenceTo>Copado_Integration_Setting__c</referenceTo>
    <relationshipLabel>Projects</relationshipLabel>
    <relationshipName>Projects</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>