force-app/main/default/objects/copado__Project__c/fields/Enable_Logs__c.field-meta.xml
<CustomField>
    <fullName>Enable_Logs__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If you are fetching more then 500 records from the third party platform, we recommend you to disable this checkbox to be able to prevent heap size too large issue.</inlineHelpText>
    <label>Enable Logs</label>
    <type>Checkbox</type>
</CustomField>