force-app/main/default/objects/copado__Project__c/fields/JQL_Extended_Filter__c.field-meta.xml
<CustomField>
    <fullName>JQL_Extended_Filter__c</fullName>
    <inlineHelpText>If you want to add an additional filter to your JIRA callout, you can just modify this field.
Usage exp: issueType=Story and resolution=Duplicate</inlineHelpText>
    <label>JQL Extended Filter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>