force-app/main/default/objects/copado__Project__c/fields/Project_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Project_External_Id__c</fullName>
    <label>Project External Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>